test/spec_vectors/simd_lane/fail/module_163.wat
(module (func $i32x4.extract_lane-2nd-arg-empty (result i32) (i32x4.extract_lane 0)))